<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/title_white"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@mipmap/gray_back"
            android:layout_marginStart="12dp"/>

        <TextView
            android:id="@+id/post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_detail"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:layout_marginStart="12dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp">

        <com.example.bobkong.myapplication.widgets.CircleImageView
            android:id="@+id/user_image"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@mipmap/userimage"
            app:border_width="0dp"
            app:border_color="@color/title_black"/>

        <TextView
            android:id="@+id/user_name"
            android:textSize="16sp"
            android:textColor="#2e2e2e"
            android:text="@string/user_name_example"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/post_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/post_time_example"
            android:textColor="#9f9e9e"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        <ImageView
            android:id="@+id/post_image"
            android:src="@mipmap/foodimage"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            android:layout_height="wrap_content"
            android:maxHeight="400dp"
            android:adjustViewBounds= "true"
            />

        <LinearLayout
            android:id="@+id/ll_food_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/food_name"
                android:text="@string/food_name_example"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#ECF0F1"
                android:layout_marginStart="8dp"
                android:gravity="center_vertical"
                android:background="@drawable/post_image_text_bg"
                />
            <View
                android:layout_width="16dp"
                android:layout_height="1dp"
                android:background="#ECF0F1"/>
            <View
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:background="@drawable/shape_circle"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_gravity="end"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="8dp"
            >
            <View
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:background="@drawable/shape_circle"/>
            <View
                android:layout_width="16dp"
                android:layout_height="1dp"
                android:background="#ECF0F1"/>
            <TextView
                android:id="@+id/cal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#ECF0F1"
                android:layout_gravity="center_vertical"
                android:text="@string/cal_example"
                android:background="@drawable/post_image_text_bg"/>

        </LinearLayout>


    </FrameLayout>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/description_example"
        android:textColor="#2e2e2e"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp">

        <ImageView
            android:src="@mipmap/ic_location"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            />

        <TextView
            android:id="@+id/loc_name"
            android:text="@string/post_location_example"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:textColor="#717171"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            />

        <TextView
            android:id="@+id/distance"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginStart="8dp"
            android:layout_gravity="center_vertical"
            android:text="@string/post_distance_example"
            android:textColor="#9f9e9e"/>

        <com.jaren.lib.view.LikeView
            android:id="@+id/favor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cirRadius="10dp"
            app:cycleTime="2000"
            android:layout_gravity="center_vertical"
            app:defaultColor="#515151" />

        <TextView
            android:id="@+id/favor_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_gravity="center_vertical"
            android:text="@string/post_favor_example"
            android:textColor="#717171"
            android:layout_marginEnd="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp">



    </LinearLayout>

</LinearLayout>