<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/title_white"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@mipmap/gray_back"
            android:layout_marginStart="12dp"/>

        <TextView
            android:id="@+id/post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post"
            android:textColor="#515151"
            android:textSize="16sp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="12dp"
            />
        
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2.5dp"
        android:background="#efefef"
        />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:hint="@string/description_hint"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:textColor="@color/title_black"
        android:background="@android:color/transparent"
        android:gravity="start"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"/>

    <ImageView
        android:id="@+id/add_image"
        android:src="@mipmap/add_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="20dp"
        android:padding="24dp"
        android:background="@drawable/add_image_bg"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color"/>

    <LinearLayout
        android:id="@+id/choose_location"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        >

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@mipmap/location_icon"
            android:layout_marginStart="4dp"
            android:layout_gravity="start|center_vertical"/>

        <TextView
            android:id="@+id/loc_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_loc_hint"
            android:textColor="@color/title_black"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:textSize="14sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_food_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:visibility="gone"
        >

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@mipmap/ic_post_food"
            android:layout_marginStart="4dp"
            android:layout_gravity="start|center_vertical"/>

        <TextView
            android:id="@+id/food_name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/food_name_hint"
            android:textColor="@color/title_black"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/correct_food_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:textColor="@color/title_black"
            android:text="@string/correct_food_name"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_cal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:visibility="gone"
        >

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@mipmap/ic_cal"
            android:layout_marginStart="4dp"
            android:layout_gravity="start|center_vertical"/>

        <TextView
            android:id="@+id/cal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cal_hint"
            android:textColor="@color/title_black"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:textSize="14sp"/>

    </LinearLayout>

</LinearLayout>